# stellar-privacy-analytics

./: .env.example  .gitignore  BUGS_AND_FIXES.md  BUGS_FOUND_AND_FIXES.md  CACHE_BUGS_AND_FIXES.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_INVALIDATION_IMPLEMENTATION.md  CACHE_QUICK_START.md  CACHE_SOLUTION_COMPLETE.md  CACHE_VERIFICATION_CHECKLIST.md  CHANGELOG.md  COMPLIANCE_AUTOMATION_README.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_QUICK_START.md  CRITICAL_FIXES_PATCH.md  Cargo.toml  FINAL_IMPLEMENTATION_REPORT.md  FINAL_REVIEW.md  FINAL_STATUS.md  FINAL_STATUS_REPORT.md  FIXES_APPLIED.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  KEY_MANAGEMENT_IMPLEMENTATION.md  KEY_MANAGEMENT_SUMMARY.md  MESSAGE_QUEUE_OPTIMIZATION.md  PR_API_KEY_LIST_DEEP_CLONE.md  PR_CACHE_INVALIDATION.md  PR_DESCRIPTION_CERTIFICATION.md  PR_DESCRIPTION_SERVICE_DISCOVERY.md  PR_DESCRIPTION_SERVICE_DISCOVERY_COMPLETE.md  PR_REQUEST_TRANSFORMER_IMMUTABLE.md  QUALITY_ISSUES.md  QUEUE_OPTIMIZATION_README.md  QUEUE_OPTIMIZATION_SUMMARY.md  QUICK_START_GUIDE.md  QUICK_START_KEY_MANAGEMENT.md  QUICK_TEST_GUIDE.md  RATE_LIMITING_PR_DESCRIPTION.md  (+13 more)
contracts/: .eslintrc.json  Cargo.toml  package-lock.json  package.json  soroban-project.yml  tsconfig.ci.json  tsconfig.json
contracts/scripts/: deploy.ts
contracts/src/: access_control.rs  access_control_tests.rs  admin.rs  initialize_auth_tests.rs  invariant_testing.rs  invariant_testing_tests.rs  lib.rs  onchain_aggregator.rs  onchain_aggregator_tests.rs  privacy_oracle.rs  privacy_oracle_tests.rs  (+6 more)
(+569 files in other folders)
